--- a/style.css
+++ b/style.css
@@ -1,23 +1,31 @@
 div {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #7fe8e8;
+    background-color: #90d0d0a3;
     display: inline-block;
     padding: 0 15px 30px 15px;
     border-radius: 10px;
+    width: 30%;
 }
 
 h1 {
     text-align: center;
-    color: #080582;
 }
 
-#input-name {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    width: 70%;
+.blue {
+    color:#080582;
 }
+
+input {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    width: 65%;
+}
+
+button {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+}
+
 #claim-btn {
     width: 27%;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color:#080582;
-    font-weight: bold;
+    margin-left: 5%;
 }
